# ai-agent-development-course

./: .env.example  .gitignore  README.md
module1/class1/slides/: Introduction to AI Agents.pptx
module1/class4/project/: .env.example  README.md  main.py  pyproject.toml
module1/class4/project/frontend/: index.html  script.js  style.css
module1/class4/project/genkit_agent/: __init__.py  agent.py  config.py
module1/class4/slides/: MemoryInAgent.pptx
module2/class1/notebook/: .env.example  Rafi-To-do-list.txt  Shahad-To-do-list.txt  add_jupyter_kernel.md  pyproject.toml  tool_use_deep_dive.ipynb
module2/class2/notebook/: Planning_&_Reasoning_14_10.ipynb
module2/class3/: README.md  main.ipynb  requirements.txt  todos.json
module2/class3/docs/: components.md
module2/class3/src/: agents.py  graph.py  nodes.py  prompts.py  schemas.py  tools.py
module2/class4/: .env.example  DIY.md  README.md  pyproject.toml
module2/class4/src/fastapi_hello/: __init__.py  main.py
module2/class5/: pyproject.toml
module2/class5/src/: full_agent.py
module2/class6/: .env.example  example.py  main.py  pyproject.toml
module2/class6/src/: agent.py  llms.py  middlewares.py  prompts.py  tools.py  vector_store.py
module3/class1/notebook/: LLama_index_with_RAG.ipynb  code_guide.txt
module3/class3/: LangGraph_Tutorial_Slides.md  langGraph.ipynb  tax-agent.ipynb
module3/class4/: joker&therapistagent.ipynb  research_team_supervisor.ipynb  sample-agent.py
module3/class6/reasearch_crew/: .env.sample  README.md  db_test.py  pyproject.toml  report.md
module3/class6/reasearch_crew/src/reasearch_crew/: crew.py  main.py
module3/class6/reasearch_crew/src/reasearch_crew/config/: agents.yaml  tasks.yaml
module3/class6/reasearch_crew/src/reasearch_crew/tools/: sql_tool.py
module4/class2/: README_DB_SETUP.md  multiagent_sql_chart.py  pyproject.toml
module4/class3/: hierarchical_agents_team.py  pyproject.toml
module4/class4/: slides.md
module4/class4/adk-sample/: SETUP.md  pyproject.toml  test_mcp_integration.py
module4/class4/adk-sample/main_agent/: agent.py
module4/class4/adk-sample/mcp-server/: README.md  time_server.py
module4/class4/adk-sample/roaster_agent/: agent.py
module4/class6/: README.md  main.py  plan.md  requirements.txt  resources.md  test.py
module4/class6/qdrant_store/: meta.json
module4/class6/src/: nodes.py  prompts.py  schemas.py  tools.py  vector_store.py
module5/class3/: .gitignore  RESOURCES.md  app.py  kb.py  requirements.txt  streaming_test.py
module5/class3/src/: agents.py  graph.py  routers.py  schemas.py  vector_store.py
module5/class3/src/utils/: prepate_kb.py
